--- a/README
+++ b/README
@@ -18,4 +18,5 @@ Daft proxy requires Javascript 6 (i.e., ECMAScript 6).
 
 Usage:
 
-    babel proxy/test1.js > proxy/test1.js5 && ./proxy/index.js proxy/test1.js5
+    babel src/proxy/test1.js > src/proxy/test1.js5 && \
+        ./src/proxy/index.js src/proxy/test1.js5
