Simplified writing agent tests using async functions that wait for Promises.
Promisified many net operations and agent management in ProxyCase.

We now require ES7 (ECMAScript 2016) and bluebird Promises.

--- a/README
+++ b/README
@@ -1,8 +1,7 @@
 There are currently three tools in the Daft toolbox:
 an HTTP Proxy, an HTTP Client, and an HTTP Server.
 
-Daft proxy requires JavaScript 6 (i.e., ECMAScript 6).
-
+Daft tools use ECMAScript 2016 and bluebird Promises (bluebirdjs.com).
 
 * Daft Proxy
 
