Started documenting primary usage modes in README. Switched to Markdown.

--- a/README
+++ b/README
@@ -1,9 +1,32 @@
 There are currently three tools in the Daft toolbox:
-an HTTP Proxy, an HTTP Client, and an HTTP Server.
+an HTTP Proxy, an HTTP Client, and an HTTP Server. 
 
 Daft tools use ECMAScript 2016 and bluebird Promises (bluebirdjs.com).
 
-* Daft Proxy
+## Usage modes
+
+There are several ways to use an HTTP agent from the Daft toolbox:
+
+ 1. As a stand-alone program driven by configuration files (so called "test
+    plots"). The plots customize agent behavior, usually by subclassing
+    Transaction classes used by the agent. For example:
+
+        src/proxy/index.js
+
+   Without any test plots, the HTTP agent behaves as a "general purpose" client, proxy, or server.
+
+ 1. Write HTTP proxy or origin server test scripts using HTTP agents as
+    configurable objects. For example:
+
+        test-proxy-must-update-headers-after-304.js
+
+ 1. Write Mocha-driven tests using HTTP agents as configurable objects. For
+    example:
+
+        mocha --require tests/mocha-config tests/test.js
+
+
+## Daft Proxy
 
 The proxy does what the configuration files (so called "test plots")
 tell it to do. Each test plot is a piece of JavaScript code that
@@ -24,7 +47,7 @@ Usage:
         ./src/proxy/index.js src/proxy/plot1.js5
 
 
-* Daft Client
+## Daft Client
 
 Like Daft Proxy, the client tool is driven by "test plots".
 The client requires a test plot to run.
@@ -35,7 +58,7 @@ Usage:
         ./src/client/index.js src/client/plot-raw.js5
 
 
-* Daft Server
+## Daft Server
 
 The server tool has not been documented yet. It is currently used
 in built-in test cases that test Daft Proxy.
